add featured candles section with 6 product images and titles

--- a/index.html
+++ b/index.html
@@ -33,5 +33,46 @@
             </li>
         </ul>
     </header>
+
+    <main>
+        <h1> Our Candles </h1>
+        <h1 class= "page-title">Featured Candles</h1>
+// Candle photos 
+
+<div class="product top-left"> //Candle 1 
+    <img class="product-img" src="images/calm-breeze-candle.png">
+<div class="product-title">Calm Breeze</div>
+</div>
+
+<div class="product top-right"> //Candle 2 
+ <img class="product-img" src="images/blush-bloom-candle.png">
+<div class="product-title">Blush BLoom</div>
+</div>
+
+<div class="product top-middle"> //Candle 3 
+ <img class="product-img" src="images/forest-rain-candle.png">
+<div class="product-title">Forest Rain</div>
+</div>
+
+<div class="product buttom-left"> //Candle 4
+<img class="product-img" src="images/morning-brew-candle.png">
+<div class="product-title">Morning Brew</div>
+</div>
+
+<div class="product buttom-right"> //Candle 5
+<img class="product-img" src="images/warm-honey-candle.png">
+<div class="product-title">Warm Honey</div>
+</div>
+
+<div class="product buttom-far-right"> //Candle 6
+<img class="product-img" src="images/golden-sun-candle.png">
+<div class="product-title">Golden Sun</div>
+</div>
+
+
+
+
+
+</main>
 </body>
 </html>
