add CSS file and layout and navigation

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-<link rel="stylesheet" href="main.css">
+<link rel="stylesheet" href="css/main.css">
 
 </head>
 <body>
     <header>
-        <nav class="site.nav">
+        <nav class="site-nav">
             <a href ="index.html" class="logo-link"> 
-            <img src="images/logo.png" alt="website logo"> </a>
+            <img src="images/logo.png" alt="website logo"> </img> </a>
 
         <ul class ="nav-list"> 
             <li class="nav-item"> 
@@ -46,7 +46,7 @@
 
 <div class="product top-right"> //Candle 2 
  <img class="product-img" src="images/blush-bloom-candle.png">
-<div class="product-title">Blush BLoom</div>
+<div class="product-title">Blush Bloom</div>
 </div>
 
 <div class="product top-middle"> //Candle 3 
@@ -54,17 +54,17 @@
 <div class="product-title">Forest Rain</div>
 </div>
 
-<div class="product buttom-left"> //Candle 4
+<div class="product bottom-left"> //Candle 4
 <img class="product-img" src="images/morning-brew-candle.png">
 <div class="product-title">Morning Brew</div>
 </div>
 
-<div class="product buttom-right"> //Candle 5
+<div class="product bottom-right"> //Candle 5
 <img class="product-img" src="images/warm-honey-candle.png">
 <div class="product-title">Warm Honey</div>
 </div>
 
-<div class="product buttom-far-right"> //Candle 6
+<div class="product bottom-far-right"> //Candle 6
 <img class="product-img" src="images/golden-sun-candle.png">
 <div class="product-title">Golden Sun</div>
 </div>
